ARROW-17985: [C++][Python] Improve s3fs error message when wrong region (#14601)

Will fix [ARROW-17985](https://issues.apache.org/jira/browse/ARROW-17985)

Lead-authored-by: Miles Granger <miles59923@gmail.com>
Co-authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>